--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-tsparticles": "^2.12.2"
+    "react-intersection-observer": "^9.6.0",
+    "react-tsparticles": "^2.12.2",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
